# phud

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build-clang.bat  build-dependencies.bat  build-gcc.bat  build-vs2022.bat  build.bat  format.bat  make.bat  makeTest.bat  static_check-gcc.bat  static_check.bat  zip.bat
doc/: README.txt  class_diagram.txt  db_tables.txt  maintenance.txt  spec.txt  spec_lecture_histo.txt  spec_stat.txt
scripts/: build-boost-clang_msvc.bat  build-boost-gcc.bat  build-boost-mingw64.bat  build-boost-msvc.bat  build-boost-vs2022.bat  build-boost-vs2026.bat  build-boost.bat  build-efsw-clang_msvc.bat  build-efsw-msvc.bat  build-fltk-clang_msvc.bat  build-fltk-gcc.bat  build-fltk-msvc.bat  build-frozen-clang_msvc.bat  build-frozen-gcc.bat  build-frozen-msvc.bat  build-frozen-vs2022.bat  build-frozen-vs2026.bat  build-gsl-clang_msvc.bat  build-gsl-gcc.bat  build-gsl-vs2026.bat  build-phud-clang_msvc.bat  build-phud-clang_vs2022.bat  build-phud-gcc.bat  build-phud-vs2022.bat  build-spdlog-clang_msvc.bat  build-spdlog-gcc.bat  build-spdlog-msvc.bat  build-sqlite-clang_msvc.bat  build-sqlite-gcc.bat  build-sqlite-msvc.bat  build-sqlite-vs2026.bat  build-stlab-libraries-clang_msvc.bat  build-stlab-libraries-gcc.bat  build-stlab-libraries-msvc.bat  build.bat  format.bat  generate-phud-clang_msvc.bat  generate-phud-clang_vs2026.bat  generate-phud-gcc.bat  generate-phud-msvc.bat  (+6 more)
src/main/cpp/constants/: ProgramInfos.hpp  TableConstants.hpp
src/main/cpp/containers/: Map.hpp  Pair.hpp  Span.hpp  ThreadSafeQueue.hpp  Tuple.hpp  Vector.hpp  algorithms.hpp
src/main/cpp/db/: Database.cpp  Database.hpp  SqlInsertor.cpp  SqlInsertor.hpp  SqlSelector.hpp  sqlQueries.hpp  sqliteQueries.hpp
src/main/cpp/dbgen/: dbgen.cpp
src/main/cpp/entities/: Action.cpp  Action.hpp  Card.cpp  Card.hpp  Game.cpp  Game.hpp  GameType.cpp  GameType.hpp  Hand.cpp  Hand.hpp  Player.cpp  Player.hpp  Seat.cpp  Seat.hpp  Site.cpp  Site.hpp
src/main/cpp/filesystem/: DirWatcher.cpp  DirWatcher.hpp  FileUtils.cpp  FileUtils.hpp  FileWatcher.cpp  FileWatcher.hpp  Filesystem.cpp  Filesystem.hpp  TextFile.cpp  TextFile.hpp
src/main/cpp/gui/: DragAndDropWindow.hpp  Gui.hpp  GuiFltk.cpp  HistoryService.cpp  HistoryService.hpp  MainWindowAppearance.hpp  MainWindowColor.hpp  MainWindowLabel.hpp  PlayerIndicator.cpp  PlayerIndicator.hpp  PlayerIndicatorWindowAppearance.hpp  Position.cpp  Position.hpp  Preferences.cpp  Preferences.hpp  Rectangle.hpp  TableService.cpp  TableService.hpp  TableWatcher.cpp  TableWatcher.hpp  WindowUtils.cpp  WindowUtils.hpp
src/main/cpp/guiDryRun/: guiDryRun.cpp
src/main/cpp/history/: GameData.hpp  PmuGameHistory.cpp  PmuGameHistory.hpp  PmuHandBuilder.cpp  PmuHandBuilder.hpp  PmuHistory.cpp  PmuHistory.hpp  PokerSiteHandBuilder.cpp  PokerSiteHandBuilder.hpp  PokerSiteHistory.cpp  PokerSiteHistory.hpp  WinamaxGameHistory.cpp  WinamaxGameHistory.hpp  WinamaxHandBuilder.cpp  WinamaxHandBuilder.hpp  WinamaxHistory.cpp  WinamaxHistory.hpp
src/main/cpp/language/: Either.hpp  EnumMapper.hpp  ErrOrRes.hpp  FieldValidators.cpp  FieldValidators.hpp  FunctionView.hpp  PhudException.cpp  PhudException.hpp  Validator.cpp  Validator.hpp  argsManagement.hpp  assert.cpp  assert.hpp  callbacks.hpp  limits.hpp
src/main/cpp/log/: Logger.cpp  Logger.hpp  LoggingLevel.cpp  LoggingLevel.hpp
src/main/cpp/mainLib/: App.cpp  App.hpp  AppInterface.cpp  AppInterface.hpp  ProgramInfos.hpp
src/main/cpp/phud/: ConfigReader.cpp  ConfigReader.hpp  ProgramArguments.cpp  ProgramArguments.hpp  ProgramConfiguration.cpp  ProgramConfiguration.hpp  phud.cpp
src/main/cpp/statistics/: PlayerStatistics.cpp  PlayerStatistics.hpp  StatsConsumer.cpp  StatsConsumer.hpp  StatsProducer.cpp  StatsProducer.hpp  TableStatistics.cpp  TableStatistics.hpp
src/main/cpp/strings/: String.cpp  String.hpp  StringLiteral.hpp  StringUtils.hpp  StringView.hpp  StringViewUtils.cpp
src/main/cpp/system/: ErrorCode.hpp  Time.cpp  Time.hpp  memory.hpp
src/main/cpp/thirdParties/cpp-clamp-cast/: clamp-cast.hpp
src/main/cpp/threads/: ConditionVariable.hpp  Mutex.hpp  PeriodicTask.cpp  PeriodicTask.hpp  PlayerCache.cpp  PlayerCache.hpp  Thread.cpp  Thread.hpp  ThreadPool.cpp  ThreadPool.hpp  ThreadSafeQueue.hpp
src/main/cpp/utilities/: FieldValidators.hpp
src/test/cpp/: AppTest.cpp  ArgManagementTest.cpp  ArgsManagementTest.cpp  DatabaseTest.cpp  DirWatcherTest.cpp  EitherTest.cpp  ErrOrResTest.cpp  FilesystemTest.cpp  HandTest.cpp  PeriodicTaskTest.cpp  PlayerStatisticsTest.cpp  PmuGameHistoryTest.cpp  PositionTest.cpp  PreferencesTest.cpp  ProgramArgumentsTest.cpp  RangeTest.cpp  RectangleTest.cpp  SabreLaserFixture.hpp  SeatTest.cpp  SourceCodeStaticCheckTest.cpp  SqlInsertorTest.cpp  StatsConsumerTest.cpp  StatsProducerTest.cpp  StringTest.cpp  TableServiceTest.cpp  TableStatisticsTest.cpp  TableWatcherTest.cpp  TestInfrastructure.cpp  TestInfrastructure.hpp  ThreadPoolTest.cpp  TimeBomb.cpp  TimeBomb.hpp  TimeTest.cpp  TournamentTest.cpp  WinamaxGameHistoryTest.cpp  WinamaxHistoryTest.cpp  WindowUtilsTest.cpp
src/test/resources/Pmu/sabre_laser/20210914/: Reims.txt
src/test/resources/Pmu/sabre_laser/20210918/: Créteil.txt
src/test/resources/Pmu/sabre_laser/20210919/: Rueil-Malmaison.txt
src/test/resources/Pmu/sabre_laser/20210920/: Argenteuil.txt  Nantes.txt
src/test/resources/Pmu/sabre_laser/20210921/: Caen.txt
src/test/resources/Pmu/sabre_laser/20210923/: Freeroll 50€ Gtd (314072368) Table #58.txt  Tournoi Freeroll Skyyart (316389205) Table #16.txt  Tournoi Freeroll Skyyart (316389205) Table #18.txt  Tournoi Freeroll Skyyart (316389205) Table #25.txt  (+1 more)
src/test/resources/Winamax/hands/: 20141031_Double or Nothing(98932321)_real_holdem_no-limit.txt  20141119_Freeroll(99427750)_real_holdem_no-limit.txt  20150115_Double or Nothing(106820182)_real_holdem_no-limit.txt  20150718_holdemTournament(123703551)_real_holdem_no-limit.txt  cashGame_HandWithoutAction.txt
src/test/resources/Winamax/sabre_laser/: config.xml
src/test/resources/Winamax/tc1591/: config.xml
(+421 files in other folders)
